# cube-stats

./: pyproject.toml
cube_stats/: data.csv  stats.ipynb  test.ipynb
tests/: test_cube_stats.py
