[tool.poetry]
name = "cube-stats"
version = "0.1.0"
description = ""
authors = ["Joel Dumoulin <joel@dumoulin.ch>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
jupyter = "^1.0.0"
pandas = "^1.2.3"
plotly = "4.14.3"
notebook = ">=5.3"
ipywidgets = ">=7.5"
matplotlib = "^3.3.4"
cufflinks = "^0.17.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
